tests/errors/extraneous_arg_type.v
fn _(a: string) -> void {
  print(a: string)
}("ASD")
